# big-unsigned-int

./: .clang-format  .clang-tidy  CMakeLists.txt  Makefile
.github/workflows/: build-and-test.yml  format-check.yml  static-analysis.yml
benchmarks/: CMakeLists.txt
benchmarks/benchmarks/: add_sub.cpp  compare.cpp  constructors.cpp  mul.cpp  round.cpp  test.cpp  to_string.cpp  trim.cpp
big_unsigned_int/: CMakeLists.txt
big_unsigned_int/include/: big_uint.hpp
big_unsigned_int/source/: add_sub.cpp  compare.cpp  constants.hpp  constructors.cpp  getters.cpp  getters.hpp  mul.cpp  round.cpp  shifts.cpp  test.cpp  to_string.cpp  trim.cpp
docs/: initial-benchmark.txt
tests/: CMakeLists.txt
tests/tests/: add_sub.cpp  compare.cpp  constructors.cpp  mul.cpp  round.cpp  to_string.cpp  tools.cpp  tools.hpp  trim.cpp
